Style: Spacing fix in contact form

--- a/src/sass/pages/contact.scss
+++ b/src/sass/pages/contact.scss
@@ -1,9 +1,9 @@
 .contact {
   margin-top: 56px;
-  padding: 5rem 0;
 
   &__heading {
     margin-bottom: 3rem;
+    padding-top: 3rem;
   }
 
   & input {
